# wall-e_ws

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/wall-e/share/ament_index/resource_index/package_run_dependencies/: wall-e
install/wall-e/share/ament_index/resource_index/parent_prefix_path/: wall-e
install/wall-e/share/wall-e/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wall-e/share/wall-e/cmake/: wall-eConfig-version.cmake  wall-eConfig.cmake
install/wall-e/share/wall-e/config/: ros_gz_bridge_config.yaml
install/wall-e/share/wall-e/environment/: ament_prefix_path.dsv  path.dsv
install/wall-e/share/wall-e/launch/: gazebo.launch.py  rviz.launch.py
install/wall-e/share/wall-e/meshes/: base_link.STL  lb_link.STL  lf_link.STL  rb_link.STL  rf_link.STL
install/wall-e/share/wall-e/rviz/: display_config.rviz
install/wall-e/share/wall-e/urdf/: robot.urdf  robot.urdf.xacro  robot_with_control.urdf  rrbot.urdf.xacro
install/wall-e/share/wall-e/worlds/: diff_drive.sdf  empty.sdf
install/wall-e_description/share/wall-e_description/: package.bash  package.zsh
log/: latest_build
src/wall-e/: CMakeLists.txt  package.xml
src/wall-e/config/: ros_gz_bridge_config.yaml
src/wall-e/launch/: gazebo.launch.py  rviz.launch.py
src/wall-e/meshes/: base_link.STL  lb_link.STL  lf_link.STL  rb_link.STL  rf_link.STL
src/wall-e/rviz/: display_config.rviz
src/wall-e/urdf/: robot.urdf  robot.urdf.xacro
